# forktex-py

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  forktex.json  pyproject.toml
.forktex/: .gitignore
.github/workflows/: ci.yml  publish.yml
docs/: cli-reference.md  cloud-boundary.md  configuration.md  credentials.md  desktop-control.md  development.md  index.html  orchestra-cli.md
scripts/: _install_core.py  build_installers.py  install.ps1  install.sh  install_test.sh  license_headers.py  sync_openapi.py
src/forktex/: __init__.py  config.py
src/forktex/agent/: __init__.py  cli.py  help.py  loop.py  manager.py  process.py  purge.py  serve.py  session.py  state.py  types.py
src/forktex/agent/atoms/: __init__.py  dispatcher.py
src/forktex/agent/auth/: __init__.py  cli.py  status.py  store.py  types.py
src/forktex/agent/cloud/: __init__.py  _local_constants.py  _manifest_cache.py  deploy.py  deployment.py  dns.py  down.py  errors.py  events.py  init.py  inspect.py  login.py  logs.py  new.py  project.py  provider.py  registry.py  server.py  settings.py  ssl.py  status.py  tree.py  up.py  usage.py  use.py  validate.py  vault.py
src/forktex/agent/commands/: __init__.py  agents.py  git_cli.py  ground.py  index_ecosystem.py  local_cli.py  root_agent.py
src/forktex/agent/fsd/: __init__.py  arch.py  arch_cli.py  arch_discover.py  check.py  ecosystem_cmd.py  makefile_cli.py  overview.py  present.py  report.py  standard.py
src/forktex/agent/fsd/templates/: arch.html  archetype.html  check.html  ecosystem.html  report.html
src/forktex/agent/fsd/templates/reports/: _base.html  _container_section.html  _system_section.html  ecosystem_report.html  system_report.html
src/forktex/agent/fsq/: __init__.py  arch.py  arch_cli.py  arch_discover.py  check.py  overview.py  present.py  report.py  standard.py
src/forktex/agent/fsq/templates/: arch.html  archetype.html  check.html  ecosystem.html  report.html
src/forktex/agent/fsq/templates/reports/: _container_section.html  system_report.html
src/forktex/agent/graph/: __init__.py  cli.py  serve.py
src/forktex/agent/intelligence/: __init__.py  agent.py  grounding.py  settings.py  tool_server.py
src/forktex/agent/intelligence/cli/: __init__.py  chat.py  init.py  orchestra.py  run.py
src/forktex/agent/manual/: __init__.py  cli.py
src/forktex/agent/network/: __init__.py  cli.py  client_factory.py  settings.py
src/forktex/agent/root_loop/: __init__.py  _stream_errors.py  chat_app.py  driver.py  menu.py  slash.py
src/forktex/agent/scraper/: __init__.py  cli.py  truths.py
src/forktex/agent/tools/: __init__.py  base.py  bash.py  desktop.py  filesystem.py  git.py  graph_tools.py  scraper.py  server.py  web.py
src/forktex/agent/ui/: __init__.py  console.py  display.py
src/forktex/agent/ui/branding/: __init__.py  palette.py  render.py
src/forktex/agent/ui/branding/glyphs/: __init__.py  cloud.py  forktex.py  intelligence.py  network.py
src/forktex/agent/workflow/: __init__.py  plan.py  sub_agent.py
src/forktex/architecture/: __init__.py  models.py
src/forktex/cloud/: __init__.py
src/forktex/core/: __init__.py  paths.py  state.py  utils.py
src/forktex/data/: __init__.py
src/forktex/data/fsd/: __init__.py  standard.json
src/forktex/engineering/: __init__.py  models.py
src/forktex/filesystem/: __init__.py  graph.py
src/forktex/fsd/: __init__.py  evaluate.py  help_tree.py  loader.py  makefile.py  models.py  profiles.py  variants.py
src/forktex/graph/: __init__.py  build.py  io_proxy.py  models.py  registry.py  scopes.py  structure.py
src/forktex/graph/export/: __init__.py  c4_html_writer.py  dsl_writer.py  html_writer.py  json_writer.py
src/forktex/graph/query/: __init__.py  _walk.py  cache.py  deps.py  ecosystem.py  fsd.py  models.py  project.py  structure.py
src/forktex/graph/views/: __init__.py  c4.py
src/forktex/intelligence/: __init__.py
src/forktex/manifest/: __init__.py  _overlay.py  models.py
src/forktex/manual/: __init__.py  agents.py  render.py  search.py  types.py
src/forktex/models/: __init__.py  architecture.py  base.py  engineering.py  manifest.py  standard.py
src/forktex/network/: __init__.py
src/forktex/runtime/: __init__.py  decorators.py  instance.py  lifecycle.py
tests/: conftest.py  test_agent_history_hardening.py  test_agent_session.py  test_agent_state.py  test_agent_types.py  test_agents_ground.py  test_argv_redaction.py  test_atom_cli.py  test_auth_connect.py  test_auth_symmetry.py  test_battle.py  test_clean_secure_perms.py  test_cli.py  test_cloud_client.py  test_cloud_config.py  test_cloud_errors.py  test_cloud_manifest_cache.py  test_config.py  test_conversation.py  test_core_paths.py  test_decorators.py  test_desktop_tools.py  test_filesystem_graph.py  test_fsd_evaluate.py  test_fsd_help_tree.py  test_fsd_makefile.py  test_fsd_standard_load.py  test_fsd_variants.py  test_graph_cli.py  test_graph_tools.py  test_grounding.py  test_imports_edges.py  test_instance_registry.py  test_intelligence.py  test_io_proxy.py  test_io_proxy_async.py  test_lifecycle.py  test_manager.py  test_manifest_overlay.py  test_manual.py  (+12 more)
web/: codegen.config.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx  store.ts
web/src/api/: archApi.ts  baseApi.ts
web/src/components/: Graph.tsx  SystemCard.tsx  SystemDetail.tsx
