[project]
name = "forktex"
version = "0.5.0"
description = "CLI, agent, architecture, audit, and SDK toolkit for the ForkTex self-managed software factory"
authors = [
    {name = "FORKTEX",email = "info@forktex.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "forktex-intelligence",
    "forktex-cloud",
    "pydantic (>=2.11.10,<3.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "anyio (>=4.11.0,<5.0.0)",
    "httpx-sse (>=0.4.0,<1.0.0)",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "asyncclick (>=8.3.0.4,<9.0.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "playwright (>=1.40.0,<2.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
]

[project.optional-dependencies]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]

[project.scripts]
forktex = "forktex.agent.cli:main"

[project.urls]
"Homepage" = "https://forktex.com"
"Repository" = "https://github.com/forktex/forktex-python"
"Bug Tracker" = "https://github.com/forktex/forktex-python/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
forktex = "forktex.agent.cli:main"

# Note: forktex-intelligence and forktex-cloud are NOT path-pinned here.
# They are resolved from whatever is installed in the active environment:
#   - On PyPI: latest published forktex-intelligence / forktex-cloud
#   - For local dev across the ecosystem, install the SDKs editable into your env
#     from their canonical homes (one-time, per environment):
#       pip install -e ../intelligence/sdk
#       pip install -e ../cloud/sdk
#       pip install -e ../core-py
#       pip install -e ../forktex-documents
#     then `pip install -e .[dev]` here.
# This keeps forktex-py independent of any specific sibling layout on disk.

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "ruff (>=0.8.0)",
    "respx (>=0.21.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
