[project]
name = "forktex"
version = "1.0.0"
description = "CLI, agent, architecture, audit, and SDK toolkit for the ForkTex self-managed software factory"
authors = [
    {name = "FORKTEX",email = "info@forktex.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "forktex-intelligence (>=1.0.0,<2.0.0)",
    "forktex-cloud (>=1.0.1,<2.0.0)",
    "forktex-network (>=1.0.0,<2.0.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "anyio (>=4.11.0,<5.0.0)",
    "httpx-sse (>=0.4.0,<1.0.0)",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "asyncclick (>=8.3.0.4,<9.0.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "playwright (>=1.40.0,<2.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
]

[project.optional-dependencies]
web = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]

[project.scripts]
forktex = "forktex.agent.cli:main"

[project.urls]
"Homepage" = "https://forktex.com"
"Repository" = "https://github.com/forktex/forktex-python"
"Bug Tracker" = "https://github.com/forktex/forktex-python/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "ruff (>=0.8.0)",
    "respx (>=0.21.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
